# RedOS

./: .gitignore  README.md  makefile  run.bat
kernel/: Cargo.toml  linker.ld  x86_64.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  ap.rs  cache.rs  console.rs  float.rs  gdt.rs  graphic.rs  ioapic.rs  lib.rs  main.rs  page.rs  percpu.rs  queue.rs  shell.rs  sync.rs  tests.rs  utility.rs
kernel/src/allocator/: dump.rs  frame.rs  mod.rs  slab.rs
kernel/src/collections/: list.rs  mod.rs  queue.rs
kernel/src/device/: mod.rs  pci.rs
kernel/src/device/block/: mod.rs  pata.rs  ram.rs
kernel/src/device/driver/keyboard/: keycode.rs  manager.rs  mod.rs  ps2.rs  usb.rs
kernel/src/device/driver/mouse/: mod.rs  ps2.rs  usb.rs
kernel/src/device/hdd/: mod.rs  pata.rs
kernel/src/device/pci/: capability.rs  mod.rs  msi.rs  search.rs
kernel/src/device/ps2/: keyboard.rs
kernel/src/device/xhc/: context.rs  device.rs  endpoint.rs  event.rs  manager.rs  mod.rs  phase.rs  pipe.rs  port.rs  ring.rs  trb.rs
kernel/src/device/xhc/allocator/: external.rs  mod.rs
kernel/src/device/xhc/descriptor/: mod.rs  structure.rs
kernel/src/font/: ascii.rs  mod.rs
kernel/src/fs/: mod.rs
kernel/src/fs/fat/: fat16.rs  fat32.rs  mod.rs
kernel/src/interrupt/: apic.rs  asm.rs  handler.rs  idt.rs  mod.rs
kernel/src/task/: idle.rs  manager.rs  mod.rs  tcb.rs
kernel/src/task/scheduler/: mod.rs  prr.rs  rr.rs
kernel/src/timer/: mod.rs  pit.rs  pm.rs
kernel/src/window/: component.rs  curser.rs  draw.rs  event.rs  frame.rs  manager.rs  mod.rs  test.rs  writer.rs
(+11 files in other folders)
