[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { path = "../bootloader" }
log = "0.4.20"
xhci = "0.9.2"
x86_64 = "0.15.1"
modular-bitfield = "0.11.2"
dyn-clone = "1.0.17"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2
