[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { path = "../bootloader" }
log = "0.4.20"
xhci = "0.9.2"
x86_64 = "0.15.1"
modular-bitfield = "0.11.2"
dyn-clone = "1.0.17"
# hashbrown = "0.14"
ascii = { version = "1.1.0", default-features = false, features = ["alloc"] }
# spin = "0.9.8"
static-box = "0.2.0"

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3
